# project-000

./: README.md  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/virtualfittingroom/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  VuforiaWrapper.cpp  virtualfittingroom.cpp
app/src/main/cpp/CrossPlatform/: AppController.cpp  AppController.h  Log.h  MemoryStream.h  Models.h  tiny_obj_loader.cpp
app/src/main/java/com/virtualfittingroom/: ARActivity.java  FittingRoomActivity.java  FittingRoomActivityMLKit.java
app/src/main/java/com/virtualfittingroom/data/: PreferenceManager.java
app/src/main/java/com/virtualfittingroom/data/api/: AuthApi.java  BaseApi.java  ResponseBody.java  RetrofitBuilder.java  UserDataApi.java
app/src/main/java/com/virtualfittingroom/data/models/: CatalogModel.java  UserModel.java
app/src/main/java/com/virtualfittingroom/ui/: LoginActivity.java  MainActivity.java  RegisterActivity.java  SplashScreenActivity.java
app/src/main/res/drawable/: ic_menu_man.xml  ic_menu_woman.xml
app/src/main/res/layout/: activity_aractivity.xml  activity_fitting_room.xml  activity_login.xml  activity_pose_detection.xml  activity_register.xml  activity_splash_screen.xml  app_bar_main.xml  fragment_katalog_pria.xml  fragment_katalog_wanita.xml  fragment_settings.xml  katalog_recyclerview_item.xml  nav_header_main.xml  progress_indicator.xml  toggle_style.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: root_preferences.xml
app/src/test/java/com/virtualfittingroom/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+23 files in other folders)
